# aada-finance

./: .gitmodules  Dockerfile  Liquidate_safety_module.monopic  README.md  Untitled.monopic  aada-lend.cabal  aada-staking.cabal  aada.nft  assets_movement.monopic  assets_movement.txt  cabal.project  cancel_loan.monopic  cancel_loan.txt  collateral.plutus  docker-compose.yaml  example-aada-nft-redeemer.json  example-collateral-redeemer.json  example-debt-request-redeemer-cancel.json  example-debt-request-redeemer-take-loan.json  example-debt-request-redeemer.json  example-liquidation-action-liquidate-with-oracle.json  example-liquidation-datum.json  example-request-redeemer.json  example.datum  flake.nix  interest.plutus  liquidation.plutus  liquidation_process.monopic  liquidation_process.txt  liquidation_sc.monopic  loan_request.monopic  loan_request.txt  oracle.nft  provide_loan.monopic  provide_loan.txt  redeemer-of-oracleNft.json  repay_loan.monopic  request.plutus  result  staking.datum  (+8 more)
.ci/: gen.sh  version.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: wf.dev.yml  wf.development-testnet.yml  wf.master.yaml  wf.release-testnet.yml  wf.release.yml  wf.stage.yml  wf.yml
app/: Main.hs  aada-tokens-staking.hs  compile-validators.hs  mint-aada-nft.hs  mint-borrower-nft.hs  mint-lender-nft.hs  mint-oracle-nft.hs  mint-time-nft.hs  show-dat-rdm.hs
docker/dev/: docker-compose.yaml
docker/development-testnet/: docker-compose.yaml
docker/master/: docker-compose.yaml
docker/release-testnet/: docker-compose.yaml
docker/stage/: docker-compose.yaml
nix/: sources.json
src/: AadaNft.hs  BorrowerNft.hs  Collateral.hs  DebtRequest.hs  Interest.hs  LenderNft.hs  Liquidation.hs  NFTStaking.hs  OracleNft.hs  PlutarchHashing.hs  Request.hs  StakingPolicy.hs  TimeNft.hs
src/Common/: Utils.hs
src/Liquidator/: SafetyModule.hs  SafetyToken.hs  wip.md
src/Liquidator/StRedeemer/: StRedeemer.hs
test/: EmulatorTrace.hs  OracleNft.hs  RunScripts.sh  Spec.hs  TestWithPrivateTestnet.hs  TestingOffChain.hs
test/CardanoCliScripts/: automate.sh  borrower.datum  borrowers.policy  borrowersPolicyID  cddl.raw  collateral.plutus  dump_b_tokens.sh  dump_l_tokens.sh  form_datum.sh  interest.plutus  lender_nft.sh  lender_unlock.sh  lenders.policy  lendersPolicyID  lockfunds.sh  matx.raw  matx.signed  mint_collateral.sh  mint_interest.sh  mint_loan.sh  mint_oracle_nft.sh  mintingPolicy  oracle.nft  policyID  receive.sh  redeemer-of-oracleNft.json  request.plutus  return.sh  transferfunds.sh
test/Helpers/: TestMintingPolicy.hs  TestValidator.hs
test/Spec/: Test.hs  Trace.hs
test/Spec/Liquidator/: Test.hs
testing/: EmulatorTrace.hs  TestingOffChain.hs
