cabal-version:      3.4
name:               aada-lend
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: on-chain part of Aada lend application

-- The license under which the package is released.
license:            AGPL-3.0-only

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Tomas Mažvila

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         tomas@aada.finance

-- A copyright notice.
-- copyright:
category:           smartcontract
build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
extra-source-files: README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src, testing

  exposed-modules:      TimeNft
                      , BorrowerNft
                      , LenderNft
                      , Collateral
                      , Interest
                      , Request
                      , TestingOffChain

  build-depends:        bytestring
                      , cardano-api
                      , flat
                      , plutus-core
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      , aeson
                      , openapi3
                      , data-default
                      , containers
                      , text
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-crypto-class
                      , cardano-wallet-core
                      , plutus-ledger-constraints
                      , plutus-contract


  ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable compile-validators
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              compile-validators.hs
  ghc-options:          -Wall

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , aada-lend 
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson

executable mint-borrower-nft
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              mint-borrower-nft.hs
  ghc-options:          -Wall

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , aada-lend 
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson

executable mint-lender-nft
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              mint-lender-nft.hs
  ghc-options:          -Wall

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , aada-lend 
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson

executable mint-time-nft
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              mint-time-nft.hs
  ghc-options:          -Wall

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , aada-lend 
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson

executable test
  import:              base, project-config
  hs-source-dirs:      testing
  main-is:             EmulatorTrace.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , bytestring
                     , cardano-api
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , cardano-ledger-shelley
                     , cardano-wallet-core
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , serialise
                     , text
                     , lens
                     , time
                     , openapi3
                     , aada-lend