cabal-version:      3.4
name:               aada-lend
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: on-chain part of Aada lend application

-- The license under which the package is released.
license:            AGPL-3.0-only

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Tomas Mažvila

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         tomas@aada.finance

-- A copyright notice.
-- copyright:
category:           smartcontract
build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
extra-source-files: README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        "-fplugin-opt PlutusTx.Plugin:defer-errors"

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src, test

  exposed-modules:      AadaNft
                      , Collateral
                      , Interest
                      , Liquidation
                      , Request
                      , OracleNft
                      , Helpers.TestValidator
                      , Spec.Test
                      , Common.Utils

  build-depends:        bytestring
                      , cardano-api
                      , flat
                      , plutus-core
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      , aeson
                      , openapi3
                      , data-default
                      , containers
                      , text
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-crypto-class
                      , cardano-wallet-core
                      , plutus-ledger-constraints
                      , plutus-contract
                      , tasty
                      , mtl
                      , plutus-simple-model
                      , utf8-string

  ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable compile-validators
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              compile-validators.hs
  ghc-options:          -Wall

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , aada-lend 
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson

executable mint-aada-nft
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              mint-aada-nft.hs
  ghc-options:          -Wall

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , aada-lend
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson
                      , optparse-applicative
                      , hex-text

executable mint-oracle-nft
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              mint-oracle-nft.hs
  ghc-options:          -Wall

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , aada-lend
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson

executable generate-example-jsons
  import:               base, project-config
  hs-source-dirs:       app, test
  main-is:              show-dat-rdm.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
  other-modules:        Helpers.TestValidator, Spec.Test

  build-depends:        aada-lend
                      , bytestring
                      , cardano-api
                      , plutus-tx
                      , aeson
                      , containers
                      , plutus-ledger
                      , plutus-ledger-constraints
                      , plutus-contract
                      , plutus-ledger-api
                      , serialise
                      , tasty
                      , tasty-hunit
                      , plutus-simple-model
                      , mtl
                      , plutus-tx-plugin
                      , utf8-string

test-suite aada-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , aada-lend
                     , plutus-tx
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , cardano-ledger-shelley
                     , cardano-api
                     , serialise
                     , data-default
                     , bytestring
                     , plutus-ledger-api
                     , plutus-tx
                     , plutus-tx-plugin
                     , aeson
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , text
                     , plutus-simple-model
                     , mtl
                     , utf8-string
