cabal-version:      3.4
name:               aada-lend
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: on-chain part of Aada lend application

-- The license under which the package is released.
license:            AGPL-3.0-only

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Tomas Mažvila

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         tomas@aada.finance

-- A copyright notice.
-- copyright:
category:           smartcontract
build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
extra-source-files: README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        "-fplugin-opt PlutusTx.Plugin:defer-errors"

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src, test

  exposed-modules:      AadaNft
                      , Collateral
                      , Interest
                      , Liquidation
                      , Request
                      , OracleNft
                      , Spec.Test
                      , Common.Utils
                      -- , NFTStaking
                      -- , StakingPolicy
                      , PlutarchHashing

  build-depends:        bytestring
                      , flat
                      , cryptonite
                      , memory
                      , plutus-core
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      , aeson
                      , openapi3
                      , data-default
                      , containers
                      , text
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-crypto-class
                      , tasty
                      , mtl
                      , plutus-simple-model
                      , utf8-string
                      , ply-core

  ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable compile-validators
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              compile-validators.hs
  ghc-options:          -Wall

  build-depends:        cardano-ledger-alonzo
                      , aada-lend
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson
                      , aeson-pretty
                      , optparse-applicative
                      , ply-core
                      , plutus-simple-model
                      , text
                      , base16-bytestring

executable mint-aada-nft
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              mint-aada-nft.hs
  ghc-options:          -Wall

  build-depends:        cardano-ledger-alonzo
                      , aada-lend
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson
                      , aeson-pretty
                      , optparse-applicative
                      , hex-text
                      , ply-core
                      , text
                      , base16-bytestring

executable mint-oracle-nft
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              mint-oracle-nft.hs
  ghc-options:          -Wall

  build-depends:        cardano-ledger-alonzo
                      , aada-lend
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
                      , aeson
                      , ply-core
                      , text

executable generate-example-jsons
  import:               base, project-config
  hs-source-dirs:       app, test
  main-is:              show-dat-rdm.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
  other-modules:        Spec.Test

  build-depends:        aada-lend
                      , bytestring
                      , plutus-tx
                      , aeson
                      , aeson-pretty
                      , containers
                      , plutus-ledger-api
                      , serialise
                      , tasty
                      , tasty-hunit
                      , plutus-simple-model
                      , mtl
                      , plutus-tx-plugin
                      , utf8-string
                      , text
                      , base16-bytestring
                      , vector

test-suite aada-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , data-default
                     , lens
                     , aada-lend
                     , plutus-tx
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , cardano-ledger-shelley
                     , serialise
                     , data-default
                     , bytestring
                     , plutus-ledger-api
                     , plutus-tx
                     , plutus-tx-plugin
                     , aeson
                     , text
                     , plutus-simple-model
                     , mtl
                     , utf8-string

-- executable aada-staking
--   import:               base, project-config
--   hs-source-dirs:       app
--   main-is:              aada-tokens-staking.hs
--   ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

--   build-depends:        cardano-ledger-alonzo
--                       , aada-lend
--                       , plutus-tx
--                       , plutus-ledger-api
--                       , bytestring