cabal-version:      3.4
name:               aada-staking
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: on-chain part of Aada staking application

-- The license under which the package is released.
license:            AGPL-3.0-only

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Tomas Mažvila

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         tomas@aada.finance

-- A copyright notice.
-- copyright:
category:           smartcontract
build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
extra-source-files: README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      NFTStaking
                      , StakingPolicy 

  build-depends:        bytestring
                      , cardano-api
                      , flat
                      , plutus-core
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas


executable aada-staking
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , aada-staking 
                      , plutus-tx
                      , plutus-ledger-api
                      , bytestring
